auth, and post search and filter implemented.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@
 
 #the URI to the MongoDB's DB. You can specify auth here too, as per Mongo docs, using mongodb://username:password@host:port/database
 DB_URI = ''
+#Secret word to salt JWT Tokens
+JWT_SECRET = ''
